force-app/main/default/objects/inov8__PMT_Phase__c/fields/inov8__End_date_from_child__c.field-meta.xml
<CustomField>
    <fullName>inov8__End_date_from_child__c</fullName>
    <label>End date from child</label>
    <type>Date</type>
</CustomField>