force-app/main/default/objects/inov8__PMT_Phase__c/fields/inov8__Kickoff_formula__c.field-meta.xml
<CustomField>
    <fullName>inov8__Kickoff_formula__c</fullName>
    <formula>IF(ISNULL(inov8__Start_Date_Rollup__c),  IF(ISNULL( inov8__Start_date_from_child_project__c), inov8__Project__r.inov8__Kickoff_formula__c, inov8__Start_date_from_child_project__c) ,inov8__Start_Date_Rollup__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>