force-app/main/default/objects/inov8__PMT_Phase__c/fields/inov8__Percentage_Completion_without_child__c.field-meta.xml
<CustomField>
    <fullName>inov8__Percentage_Completion_without_child__c</fullName>
    <formula>inov8__Sum_Of_Task_Completion__c/inov8__Task_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage Completion without child %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>