force-app/main/default/objects/inov8__PMT_Phase__c/fields/inov8__Phase_Completion__c.field-meta.xml
<CustomField>
    <fullName>inov8__Phase_Completion__c</fullName>
    <formula>FLOOR((inov8__Sum_Weighted_perc__c / inov8__Sum_Task_Duration__c)*100)/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phase Completion %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>