force-app/main/default/objects/inov8__PMT_Phase__c/fields/inov8__Project__c.field-meta.xml
<CustomField>
    <fullName>inov8__Project__c</fullName>
    <description>The project this phase is assigned to</description>
    <label>Project Name</label>
    <referenceTo>inov8__PMT_Project__c</referenceTo>
    <relationshipLabel>PMT Phases</relationshipLabel>
    <relationshipName>Project_Phases</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>