force-app/main/default/objects/inov8__PMT_Phase__c/fields/inov8__Start_date_from_child_project__c.field-meta.xml
<CustomField>
    <fullName>inov8__Start_date_from_child_project__c</fullName>
    <label>Start date from child project</label>
    <type>Date</type>
</CustomField>