force-app/main/default/objects/inov8__PMT_Phase__c/fields/inov8__Start_Date_Rollup__c.field-meta.xml
<CustomField>
    <fullName>inov8__Start_Date_Rollup__c</fullName>
    <label>Start Date Rollup</label>
    <summarizedField>inov8__PMT_Task__c.inov8__Start_Date__c</summarizedField>
    <summaryForeignKey>inov8__PMT_Task__c.inov8__Phase__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>