force-app/main/default/objects/inov8__PMT_Phase__c/fields/inov8__Sum_Of_Task_Completion__c.field-meta.xml
<CustomField>
    <fullName>inov8__Sum_Of_Task_Completion__c</fullName>
    <label>Sum Of Task Completion</label>
    <summarizedField>inov8__PMT_Task__c.inov8__Percentage_Completion__c</summarizedField>
    <summaryForeignKey>inov8__PMT_Task__c.inov8__Phase__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>