force-app/main/default/objects/inov8__PMT_Phase__c/fields/inov8__Sum_Weighted_perc__c.field-meta.xml
<CustomField>
    <fullName>inov8__Sum_Weighted_perc__c</fullName>
    <label>Sum Weighted %</label>
    <summarizedField>inov8__PMT_Task__c.inov8__Weighted_percentage__c</summarizedField>
    <summaryForeignKey>inov8__PMT_Task__c.inov8__Phase__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>