force-app/main/default/objects/inov8__PMT_Phase__c/fields/inov8__Task_Count__c.field-meta.xml
<CustomField>
    <fullName>inov8__Task_Count__c</fullName>
    <description>Count phases for calculating average</description>
    <label>Tasks Count</label>
    <summaryForeignKey>inov8__PMT_Task__c.inov8__Phase__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>